--- a/style.css
+++ b/style.css
@@ -11,6 +11,13 @@
   width: 100%;
   height: 100vh;
   background-image: linear-gradient(to right top, #5d6f8b, #6991a1, #87b1b0, #b2cfbf, #e4ebd4);
+
+  background-image: linear-gradient(to right top, #70bdcd, #5bcac3, #6ad3a8, #95d883, #ccd660);
+
+  background-image: linear-gradient(to right top, #4ec6e0, #73c5ee, #9ac2f3, #bbbff0, #d5bee7);
+
+  background-image: linear-gradient(to right top, #4ec6e0, #73c5ee, #9ac2f3, #bbbff0, #d5bee7);
+
 }
 
 .container {
@@ -25,12 +32,13 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  border: 2px solid gray;
+  /* border: 2px solid gray; */
+  box-shadow: 1px 1px 15px 10px gray;
   border-radius: 5px;
   width: 320px;
   height: 320px;
   padding: 50px;
-  margin-top: 20px;
+  margin-top: 30px;
 }
 
 .small-container input,
@@ -63,5 +71,6 @@ button {
 h1 {
   font-size: 35px;
   color: white;
-  text-shadow: 2px 2px rgb(186, 121, 0);
+  word-spacing: 3px;
+  text-shadow: 2px 2px rgb(73, 73, 73);
 }
